--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                 android:padding="16dp"
                 android:text="0"
                 android:textColor="#000000"
-                android:textSize="56sp" />
+                android:textSize="100sp" />
 
             <Button
                 android:layout_width="match_parent"
@@ -85,7 +85,7 @@
                 android:padding="16dp"
                 android:text="0"
                 android:textColor="#000000"
-                android:textSize="56sp" />
+                android:textSize="100sp" />
 
             <Button
                 android:layout_width="match_parent"
@@ -106,15 +106,14 @@
 
         </LinearLayout>
     </LinearLayout>
-
     <Button
         android:id="@+id/ResetButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:onClick="ResetScore"
-        android:padding="29dp"
-        android:text="Reset" />
+        android:padding="30dp"
+        android:text="Reset Score" />
 </RelativeLayout>
